# scim_filter_parser

./: LICENSE  pyproject.toml
reference/: example_querys.txt  scim_filter_ABNF.txt  scim_operators.txt
src/scim_filter_parser/: err_strings.py  lexer.py  operators.py
tests/: test_lexer.py
